feat: add 22_4 back

--- a/.github/workflows/supported-versions.yml
+++ b/.github/workflows/supported-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "::set-output name=matrix::[\"21_18\",\"21_20\",\"22_0\",\"22_2\"]"
+          echo "::set-output name=matrix::[\"21_18\",\"21_20\",\"22_0\",\"22_2\",\"22_4\"]"
