--- a/.github/workflows/supported-versions.yml
+++ b/.github/workflows/supported-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "::set-output name=matrix::[\"22_12\"]"
+          echo "::set-output name=matrix::[\"22_6\",\"22_8\",\"22_10\",\"22_12\"]"
