--- a/.github/workflows/security-versions.yml
+++ b/.github/workflows/security-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "::set-output name=matrix::[\"21_12\",\"21_18\",\"22_0\",\"22_6\",\"22_8\",\"22_10\",\"22_12\"]"
+          echo "::set-output name=matrix::[\"22_18\",\"22_20\",\"23_0\",\"23_2\"]"
