fix: use $GITHUB_OUTPUT environment file

--- a/.github/workflows/primary-version.yml
+++ b/.github/workflows/primary-version.yml
@@ -56,4 +56,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "::set-output name=matrix::[\"23_0\"]"
+          echo "::set-output name=matrix::[\"23_0\"]" >> $GITHUB_OUTPUT
