Revert "fix: use $GITHUB_OUTPUT environment file (#6)"
This reverts commit ae427eeb7a7b8eff72e0e809c0e2508fb1b8f2ce.

--- a/.github/workflows/security-versions.yml
+++ b/.github/workflows/security-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "::set-output name=matrix::[\"22_18\",\"22_20\",\"23_0\",\"23_2\"]" >> $GITHUB_OUTPUT
+          echo "::set-output name=matrix::[\"22_18\",\"22_20\",\"23_0\",\"23_2\"]"
