--- a/.github/workflows/test-primary-version.yml
+++ b/.github/workflows/test-primary-version.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   setup:
-    uses: looker-open-source/reusable-actions/.github/workflows/primary-version.yml@main
+    uses: looker-open-source/reusable-actions/.github/workflows/primary-version.yml@${{ github.sha }}
 
   test:
     name: test
