--- a/.github/workflows/test-security-versions.yml
+++ b/.github/workflows/test-security-versions.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   setup:
-    uses: looker-open-source/reusable-actions/.github/workflows/security-versions.yml@${{ github.sha }}
+    uses: looker-open-source/reusable-actions/.github/workflows/security-versions.yml
 
   test:
     name: test - ${{ matrix.looker }}
