update versions for 23_6 (#9)
* chore: update versions for 23_6

* chore: can't parameterize the sha in reuasable workflow call

* chore: workflow with no ref must be called locally

* chore: upgrade version of checkout action

* chore: fix typo

* chore: remove useless checkout from workflow

--- a/.github/workflows/test-primary-version.yml
+++ b/.github/workflows/test-primary-version.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   setup:
-    uses: looker-open-source/reusable-actions/.github/workflows/primary-version.yml@main
+    uses: ./.github/workflows/primary-version.yml
 
   test:
     name: test
@@ -24,7 +24,5 @@ jobs:
         looker: ${{ fromJson(needs.setup.outputs.matrix_json) }}
 
     steps:
-      - name: Repo Checkout
-        uses: actions/checkout@v2
       - name: Run a one-line script
         run: echo Hello, ${{ matrix.looker }}
