--- a/.github/workflows/test-supported-versions.yml
+++ b/.github/workflows/test-supported-versions.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   setup:
-    uses: looker-open-source/reusable-actions/.github/workflows/supported-versions.yml@main
+    uses: ./.github/workflows/supported-versions.yml
 
   test:
     name: test - ${{ matrix.looker }}
@@ -15,7 +15,5 @@ jobs:
         looker: ${{ fromJson(needs.setup.outputs.matrix_json) }}
 
     steps:
-      - name: Repo Checkout
-        uses: actions/checkout@v2
       - name: Run a one-line script
         run: echo Hello, ${{ matrix.looker }}
