--- a/.github/workflows/security-versions.yml
+++ b/.github/workflows/security-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"23_0\",\"23_6\",\"23_10\",\"23_12\",\"23_14\",\"23_16\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"22_18\",\"23_0\",\"23_6\",\"23_12\",\"23_14\",\"23_16\",\"23_18\"]" >> $GITHUB_OUTPUT
