--- a/.github/workflows/supported-versions.yml
+++ b/.github/workflows/supported-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"23_12\",\"23_16\",\"23_18\",\"23_20\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"23_12\",\"23_16\",\"23_18\",\"23_20\",\"24_0\"]" >> $GITHUB_OUTPUT
