--- a/.github/workflows/security-versions.yml
+++ b/.github/workflows/security-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"23_0\",\"23_6\",\"23_12\",\"23_18\",\"23_20\",\"24_0\",\"24_2\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"23_6\",\"23_12\",\"23_18\",\"24_0\",\"24_2\",\"24_4\"]" >> $GITHUB_OUTPUT
