--- a/.github/workflows/supported-versions.yml
+++ b/.github/workflows/supported-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"24_0\",\"24_2\",\"24_4\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"24_0\",\"24_2\",\"24_4\",\"24_6\"]" >> $GITHUB_OUTPUT
