--- a/.github/workflows/security-versions.yml
+++ b/.github/workflows/security-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"23_12\",\"23_18\",\"24_0\",\"24_6\",\"24_8\",\"24_10\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"23_12\",\"23_18\",\"24_0\",\"24_6\",\"24_8\",\"24_10\",\"24_12\"]" >> $GITHUB_OUTPUT
