chore: changes for 24.14 suppport

--- a/.github/workflows/most-recent-version.yml
+++ b/.github/workflows/most-recent-version.yml
@@ -56,4 +56,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"24_12"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"24_14\"]" >> $GITHUB_OUTPUT
