--- a/.github/workflows/security-versions.yml
+++ b/.github/workflows/security-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"25_0\",\"24_20\",\"24_18\",\"24_12\",\"24_6\",\"24_0\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"25_2\",\"25_0\",\"24_20\",\"24_18\",\"24_12\",\"24_6\",\"24_0\"]" >> $GITHUB_OUTPUT
