--- a/.github/workflows/supported-versions.yml
+++ b/.github/workflows/supported-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"25_0\",\"24_20\",\"24_18\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"25_2\",\"25_0\",\"24_20\",\"24_18\"]" >> $GITHUB_OUTPUT
