--- a/.github/workflows/security-versions.yml
+++ b/.github/workflows/security-versions.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix=[\"25_10\",\"25_8\",\"25_6\",\"25_0\",\"24_18\",\"24_12\"]" >> $GITHUB_OUTPUT
+          echo "matrix=[\"25_14\",\"25_12\",\"25_10\",\"25_6\",\"25_0\",\"24_18\",\"24_12\"]" >> $GITHUB_OUTPUT
